docs/1.12/lang/index.md
description: Создание локализации вещей.

# Локализация

Мы достаточно предметов сделали, теперь нам нужно их перевести. Перейдём по пути
```md
└── src    
    └── main
        └── resources
            └── assets
                └── tut
```

Создадим папку `lang`, а в ней файл `ru_ru` формата `.lang`.

!!! важно
    Обратите внимание, что с 1.12+ все файлы ресурсов должны быть в нижнем регистре, в противном же случае придётся использовать pack.mcmeta!

Содержание файла:
```text
itemGroup.tut=Tutorial

item.key.name=Ключ

tile.best_stone.name=Лучший Камень
```

* `itemGroup.*TabName*` - такой вид используется для локализации вкладки в творческом режиме.
* `item.*ItemName*.name` - такой вид используется для локализации предметов.
* `tile.*BlockName*.name` - такой вид используется для локализации блока.

* `*TabName*` - название вашей вкладки.
* `*ItemName*` - UnlocalizedName вашего предмета.
* `*BlockName*` - UnlocalizedName вашего блока.

Перейдём в игру и сменим язык на русский. Теперь предметы, которые мы указали в файле, переведены. Для других языков делается также.
